<resources>
    <string name="app_name">Cantos</string>
    <string name="agregar">Agregar</string>
    <string name="letra">Letra</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="modificar">Modificar</string>
    <string name="modificar_canto">Modificar canto</string>
    <string name="nuevo_canto">Nuevo canto</string>
    <string name="buscar">Buscar</string>
    <string name="acerca_de">Acerca de</string>
    <string name="aceptar">Aceptar</string>
    <string name="eliminar">Eliminar</string>
    <string name="subir_tono">Subir tono</string>
    <string name="bajar_tono">Bajar tono</string>
    <string name="disminuir_tamano_letra">Disminuir tamaño de letra</string>
    <string name="aumentar_tamano_letra">Aumentar tamaño de letra</string>
    <string name="nuevo">Nuevo</string>
    <string name="quitar_tonos">Quitar tonos</string>
    <string name="ver_tonos">Ver tonos</string>
    <string name="todos">Todos</string>
    <string name="momento">Momento</string>
    <string name="tiempo">Tiempo</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_tiempos">Agregar tiempos</string>
    <string name="exportar_pdf">Exportar en PDF</string>
    <string name="escanear">Escanear</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o registrate</string>
    <string name="action_sign_in_short">Inicia sesión</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">Usuario invalido</string>
    <string name="invalid_password">La contraseña debe tener minimo 8 carácteres</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="esquema">Esquema</string>
    <string name="title_activity_menu_lateral">MenuLateralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Invitado</string>
    <string name="nav_header_subtitle">Tu canto al alcance de tu mano</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mis_cantos">Mis Cantos</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="esquemas">Esquemas</string>
    <string name="grupos">Grupos</string>
    <string name="afinador">Afinador</string>

    <string name="Re">D</string>
    <string name="la">A</string>
    <string name="Mi">E</string>
    <string name="Sol">G</string>
    <string name="Si">B</string>
    <string name="Mi2">e</string>
    <string name="Text_view1">Indicacion</string>
    <string name="Frecuencia">Frecuencia</string>
    <string name="boton_cal">c</string>
    <string name="boton_ukelele">Ukelele</string>
    <string name="boton_guitarra">Guitarra</string>
    <string name="indicador">Indicador</string>
    <string name="ajustar">Ajustar</string>
    <string name="desajustar">Desajustar</string>
    <string name="afinado">Afinado</string>
    <string name="registrate">Registrate</string>
    <string name="telefono">Telefono</string>
    <string name="listo">Listo</string>
    <string name="contrasena">Contraseña</string>
    <string name="google">Google</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="bienvenido">Para continuar inicia sesión</string>
    <string name="ver_sin_comillas">Ver sin comillas</string>
    <string name="error_obtener_cuenta">Error al obtener la cuenta</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="error_credenciales_google">Error con las credenciales de Google</string>
    <string name="introduce_correo">Introduce tu correo electrónico</string>
    <string name="introduce_contrasena">Introduce tu contraseña</string>
    <string name="minimo_ocho_caracteres">Minimo 8 carácteres</string>
    <string name="datos_incorrectos">Correo o contraseña incorrecta</string>
    <string name="error_cuenta">\"Error al obtener la cuenta: \"</string>
    <string name="guardar_esquema">Guardar Esquema</string>
    <string name="agregar_canto">Agregar canto</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="ver_canto">Ver canto</string>
    <string name="eliminar_de_la_lista">Eliminar del esquema</string>
    <string name="duracion">Duracion</string>
    <string name="todo">TODO</string>
    <string name="cambiar_app">Cambiar App</string>
</resources>