<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/buscar"
        android:icon="@drawable/ic_buscar"
        android:title="@string/buscar"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/nuevoCanto"
        android:title="@string/nuevo"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/info"
        android:title="@string/acerca_de"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/cerrarSesion"
        android:title="@string/cerrar_sesion"
        app:showAsAction="never"
        />

</menu>