<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_listaCantos">

    <fragment
        android:id="@+id/nav_listaCantos"
        android:name="com.pacosotelo.coro.ui.ListaCantosFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_lista_cantos" />

    <fragment
        android:id="@+id/nav_listaEsquemas"
        android:name="com.pacosotelo.coro.ui.ListaEsquemasFragment"
        android:label="@string/esquemas"
        tools:layout="@layout/fragment_lista_esquemas" />
    <fragment
        android:id="@+id/nav_afinador"
        android:name="com.pacosotelo.coro.ui.AfinadorFragment"
        android:label="@string/afinador"
        tools:layout="@layout/fragment_afinador" />


</navigation>