<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fondo"
    tools:context=".ui.NuevoEsquemaActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="@+id/app_bar"
        tools:ignore="UselessLeaf">

        <TextView
            android:id="@+id/tvNombre"
            style="@style/texto"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombreEsquema"
            style="@style/campo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="Nombre"
            android:inputType="text"
            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/bAgregarCanto"
            style="@style/boton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="0dp"
            android:text="@string/agregar_canto"
            android:textSize="20sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <!--androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCantosEsquema"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bGuardarEsquema"
        app:layout_constraintTop_toBottomOf="@+id/ll"
        android:layout_margin="20dp"
        tools:ignore="MissingConstraints" /-->

    <ListView
        android:id="@+id/rvCantosEsquema"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bGuardarEsquema"
        app:layout_constraintTop_toBottomOf="@+id/ll"
        android:layout_margin="20dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bGuardarEsquema"
        style="@style/boton"
        android:layout_width="match_parent"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="15dp"
        android:layout_height="50dp"
        android:text="@string/guardar_esquema"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/app_bar"
        tools:layout_editor_absoluteX="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>